--- a/client/styles/Footer.module.css
+++ b/client/styles/Footer.module.css
@@ -5,12 +5,14 @@
     font-weight: 300;
     display: flex;
     flex-direction: row;
+    overflow-x: hidden;
 }
 .heading{
     padding: 10px;
     color: white;
     font-size: 20px;
     font-weight: 500;
+    overflow-x: hidden;
 }
 .class:hover{
     text-decoration: underline;
@@ -39,14 +41,22 @@
 }
 @media (max-width: 880px){
     .padding{
-        padding: 30px 80px;
+        padding: 25px 80px;
     }
 }
-@media (max-width: 720px){
+@media (max-width: 700px){
     .wide{
         width: 220vw;
     }
     .padding{
-        padding: 30px 20px;
+        padding: 20px 20px;
+    }
+    .class{
+        padding: 10px;
+        font-size: 20px;
+    }
+    .heading{
+        padding: 10px;
+        font-size: 24px;
     }
 }
