--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -6,6 +6,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: Poppins;
+  overflow-x: hidden;
 }
 
 a {
@@ -13,9 +14,6 @@ a {
   text-decoration: none;
 }
 
-body {
-  overflow-x: hidden; /* Hide scrollbars */
-}
 
 * {
   box-sizing: border-box;
