navBar height decreased

--- a/client/styles/Footer.module.css
+++ b/client/styles/Footer.module.css
@@ -97,7 +97,7 @@
         
         font-size: 0.6rem;
         height: 7vh;
-        justify-content: center;
+        align-content: center;
         
     }
     .heading{
