--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -6,7 +6,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'poppins';
+  font-family: 'poppins', sans-serif;
   overflow-x: hidden;
 }
 
