removed spacing between slider and topBar

--- a/client/styles/Footer.module.css
+++ b/client/styles/Footer.module.css
@@ -18,7 +18,7 @@
     text-decoration: underline;
 }
 .copyright{
-    font-family: "Roboto Mono";
+    font-family: "Roboto Mono" , sans-serif;
     color: white;
     text-align: center;
     font-size: 14px;
