--- a/client/styles/_nav.scss
+++ b/client/styles/_nav.scss
@@ -143,6 +143,7 @@ nav {
   nav {
     .nav-links {
       background: rgb(97, 97, 167);
+      top: -1rem;
     }
   }
 
@@ -215,6 +216,7 @@ nav {
   nav {
     .nav-links {
       background: rgb(97, 97, 167);
+      top: -1rem;
     }
   }
 
