--- a/client/styles/Footer.module.css
+++ b/client/styles/Footer.module.css
@@ -11,7 +11,7 @@
     background-color: #25477A;
     height: 21rem;
     padding: 2rem;
-    margin-top: 2rem;
+    margin-top: 4rem;
     font-family: "DM Sans";
 }
 
@@ -53,7 +53,7 @@
     }
     .icon{
         margin-right: 10px;
-        font-size: 1.2rem;
+        /* font-size: 1.2rem; */
         /* padding-top: 6px; */
     }
     .footer{
@@ -71,7 +71,7 @@
     }
     .icon{
         margin-right: 6px;
-        font-size: 0.6rem;
+        /* font-size: 0.6rem; */
         /* padding-top: 4px; */
     }
     .footer{
