--- a/client/styles/Footer.module.css
+++ b/client/styles/Footer.module.css
@@ -7,7 +7,7 @@
 }
 
 .grid{
-    font-size: 1rem;
+    font-size: 1.2rem;
     background-color: #25477A;
     height: 21rem;
     padding: 2rem;
@@ -15,7 +15,7 @@
 }
 
 .title{
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     color: white;
     font-weight: bold;
 }
@@ -29,6 +29,14 @@
     font-family: "Roboto Mono";
     height: 3rem;
     font-size: 1rem;
+}
+@media (max-width:1200px) {
+    .grid{
+        font-size: 1rem;
+    }
+    .title{
+        font-size: 1.2rem;
+    }
 }
 @media (max-width:800px) {
     .grid{
