--- a/client/styles/Footer.module.css
+++ b/client/styles/Footer.module.css
@@ -7,15 +7,15 @@
 }
 
 .grid{
-    font-size: 1.2rem;
+    font-size: auto;
     background-color: #25477A;
-    height: 21rem;
+    height: auto;
     padding: 2rem;
     font-family: "DM Sans";
 }
 
 .title{
-    font-size: 1.4rem;
+    font-size: auto;
     color: white;
     font-weight: bold;
 }
@@ -28,60 +28,5 @@
     text-align: center;
     font-family: "Roboto Mono";
     height: 3rem;
-    font-size: 1rem;
-}
-@media (max-width:1200px) {
-    .grid{
-        font-size: 1rem;
-    }
-    .title{
-        font-size: 1.2rem;
-    }
-}
-@media (max-width:800px) {
-    .grid{
-        padding: 2rem;
-        font-size: 0.8rem;
-    }
-    .title{
-        font-size: 1rem;
-    }
-    .footer{
-        font-size: 0.85rem;
-    }    
-}
-@media (max-width:600px) {
-    .grid{
-        padding: 1.6rem;
-        font-size: 0.8rem;
-    }
-    .title{
-        font-size: 1rem;
-    }
-    .icon{
-        margin-right: 10px;
-        /* font-size: 1.2rem; */
-        /* padding-top: 6px; */
-    }
-    .footer{
-        font-size: 0.7rem;
-    }   
-}
-@media (max-width:510px) {
-    .grid{
-        padding: 1.2rem;
-        font-size: 0.5rem;
-        height: 15rem;
-    }
-    .title{
-        font-size: 0.7rem;
-    }
-    .icon{
-        margin-right: 6px;
-        /* font-size: 0.6rem; */
-        /* padding-top: 4px; */
-    }
-    .footer{
-        font-size: 0.4rem;
-    }   
+    font-size: auto;
 }
