--- a/client/styles/Footer.module.css
+++ b/client/styles/Footer.module.css
@@ -7,7 +7,7 @@
 }
 
 .grid{
-    font-size: auto;
+    font-size: 14px;
     background-color: #25477A;
     height: auto;
     padding: 2rem;
@@ -15,7 +15,7 @@
 }
 
 .title{
-    font-size: auto;
+    font-size: 16px;
     color: white;
     font-weight: bold;
 }
