--- a/client/styles/Footer.module.css
+++ b/client/styles/Footer.module.css
@@ -1,101 +1,32 @@
-.class{
-    padding: 10px;
+.link{
     color: white;
-    font-size: 16px;
-    font-weight: 300;
-    display: flex;
-    flex-direction: row;
-    overflow-x: hidden;
 }
-.heading{
-    padding: 10px;
-    color: white;
-    font-size: 20px;
-    font-weight: 500;
-    overflow-x: hidden;
-}
-.class:hover{
+
+.link:hover{
     text-decoration: underline;
 }
-.copyright{
-    font-family: "Roboto Mono";
-    color: white;
-    text-align: center;
-    font-size: 14px;
-    padding: 10px;
-}
-.space{
-    margin-right: 5px;
 
+.grid{
+    font-size: 14px;
+    background-color: #25477A;
+    height: auto;
+    padding: 2rem;
+    font-family: "DM Sans";
 }
-.wide{
-    overflow: hidden;
-    width: 98.9vw;
+
+.title{
+    font-size: 16px;
+    color: white;
+    font-weight: bold;
 }
-.padding{
-    padding: 30px 120px;
+.icon{
+    margin-right: 15px;
 }
-@media (max-width: 1300px){
-    .padding{
-        padding: 25px 90px;
-    }
-    .wide{
-        width: 100vw;
-    }
-    .class{
-        padding: 10px;
-        font-size: 20px;
-    }
-    .heading{
-        padding: 10px;
-        font-size: 24px;
-    }
-}
-@media (max-width: 880px){
-    .padding{
-        padding: 25px 60px;
-    }
-    .wide{
-        width: 100vw;
-    }
-    .class{
-        padding: 8px;
-        font-size: 20px;
-    }
-    .heading{
-        padding: 8px;
-        font-size: 24px;
-    }
-}
-@media (max-width: 750px){
-    .wide{
-        width: 100vw;
-    }
-    .padding{
-        padding: 20px 20px;
-    }
-    .class{
-        padding: 10px;
-        font-size: 20px;
-    }
-    .heading{
-        padding: 10px;
-        font-size: 24px;
-    }
-}
-@media (max-width: 580px){
-    .wide{
-        width: 99vw;
-    }
-    .padding{
-        padding: 20px 20px;
-    }
-    .class{
-        padding: 10px;
-        font-size: 20px;
-    }
-    .heading{
-        padding: 10px;
-        font-size: 24px;
-    }
+.footer{
+    color: white;
+    background-color: #25477A;
+    text-align: center;
+    font-family: "Roboto Mono";
+    height: 3rem;
+    font-size: auto;
 }
